# data-science-poc

./: .env.example  .gitignore  DATA.md  LEARN.md  README.md  config.py  convert_raw_to_json.py  email_template.html  error.py  gemini.ipynb  json-data.json  logger.py  main.py  numpy_basics.py  pyproject.toml
ipynb/: gemini.ipynb  matplotlib.ipynb  pandas.ipynb  seaborn.ipynb  sklearn.ipynb
middleware/: request_logging.py
schema/: response.py  schemas.py
